# ChangeLog for media-libs/fontconfig
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.100 2007/12/20 23:22:45 dirtyepic Exp $

*fontconfig-2.5.0-r1 (20 Dec 2007)

  20 Dec 2007; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.0-r1.ebuild:
  Revision bump.  Added PDEPEND on app-admin/eselect-fontconfig.

*fontconfig-2.5.0 (14 Nov 2007)

  14 Nov 2007; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.0.ebuild:
  Version bump.

  02 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> fontconfig-2.4.2.ebuild:
  Use CONFIG_PROTECT_MASK to force updates to /etc/fonts/fonts.conf rather
  than nasty pkg_postinst hacks. Bug #183576 by Alan Hourihane.

  21 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  -files/fontconfig-2.3.2-pkg_config.patch,
  -files/fontconfig-2.3.2-symbol_alias.patch, -fontconfig-2.3.2-r1.ebuild:
  Remove old.

  16 Jul 2007; Christian Heim <phreak@gentoo.org> Manifest:
  Fixing the Manifest (for real).

  16 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> Manifest:
  Fix digest.

  16 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/fontconfig-2.3.2-pkg_config.patch,
  +files/fontconfig-2.3.2-symbol_alias.patch, +fontconfig-2.3.2-r1.ebuild:
  Readd 2.3.2-r1 for bug #185484.

  15 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  -files/patch/fontconfig-2.1-slighthint.patch,
  -files/patch/fontconfig-2.2-blacklist.patch,
  -files/patch/fontconfig-2.2-local_fontdir-r1.patch,
  -files/patch/fontconfig-2.2-remove_subpixel_test.patch,
  -files/fontconfig-2.3.2-noftinternals.patch,
  -files/fontconfig-2.3.2-pkg_config.patch,
  -files/fontconfig-2.3.2-symbol_alias.patch, -fontconfig-2.2.3.ebuild,
  -fontconfig-2.3.2-r1.ebuild, -fontconfig-2.3.2-r2.ebuild,
  -fontconfig-2.4.1.ebuild:
  Remove old.

  15 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  -files/fontconfig-2.3.2-noftinternals.patch,
  -files/fontconfig-2.3.2-pkg_config.patch,