@@ -1,8 +1,8 @@
 AUX fontconfig-2.3.2-docbook.patch 506 RMD160 c205d99ecc19866da8d0ac4ef7172dcef98a6299 SHA1 1054f38cef09c93baf34f08253345ca2ae638e4a SHA256 c6480dcf19fec22126a9205fa3d9b317e5a97613f86218cf1926a2a07848afd5
 DIST fontconfig-2.4.2.tar.gz 1278340 RMD160 c953020a5193500080c9eceef47b76e61c41b188 SHA1 cd5e30625680a0435563b586275156eaf8d0d34a SHA256 63a3d6413182817b91eea327b58c243f1865acfc40bef61fc52d2b0431341363
 DIST fontconfig-2.5.0.tar.gz 1385058 RMD160 2c61ba3adc49aa5dd4eb081e13a849cc1d62d9da SHA1 9ffad5f5eb2c5dd277bfed1cafc6e62aa0172842 SHA256 34c6badb4cb7eb496779d30616903de400fa244838ea39c2a7f63eaa5fdf0efe
-EBUILD fontconfig-2.4.2.ebuild 2500 RMD160 58521949ac5cb65f2c9534bd63ff81fe3256ce5a SHA1 0de697367e55ca1ce228f901b89f945723e4bc48 SHA256 2c1e0ebbc89996da85dd4b832258fc5df632a818f354abb6d79250b967825d6e
-EBUILD fontconfig-2.5.0-r1.ebuild 2513 RMD160 b34e74b173c0c7cefcd8ffba7f4ab9c80fe5d96e SHA1 c125d6f61d53d970e5234634a7982186f465d4f2 SHA256 bda9fa58511132bd32997b5ff2c4ad762db02e0b0a5cec3e8c01f5a1321297b8
-EBUILD fontconfig-2.5.0.ebuild 2471 RMD160 839c767a3a7217847b0b5c29c1e50c3cd509dd41 SHA1 a8c3bb49aed875d4f33c800ac19ab2397e3c843a SHA256 b81fde15db5d7fafcdad6bef7d795bff9581e2630060842f2115eaa95a210a4b
-MISC ChangeLog 15133 RMD160 4dcab07dfd56b59a720a177ac4e121ff3b1d7564 SHA1 c564e66a617d6488ba706098ef653e0ea43ae248 SHA256 550e204e791c793a296d291314baf50f9d226e9e10cdbb0d5130e89588db82ed
+EBUILD fontconfig-2.4.2.ebuild 2512 RMD160 825276104aa8a4a07b4863df6a927b31b6251efc SHA1 5ee0e89c8d0d0540d0a4e2ee6eff214114752fc7 SHA256 e198498dd245f8375df12a371b40ca3f58dbd2d1d423d84ea358f626b750ad7e
+EBUILD fontconfig-2.5.0-r1.ebuild 2522 RMD160 a4dab39d2693948bff9b33c4c182e3ff72e22180 SHA1 098fa3d6926bff2cb6dcf4854cfd3d9ea6ca1d22 SHA256 060d0063700a198135d652577c1674df86724f947861cf3b1fdf8f5064f69fa8
+EBUILD fontconfig-2.5.0.ebuild 2483 RMD160 66eac24b6831a0da29ff79876aa650c8f099a7b1 SHA1 0022d1617322f3b0589822617cc549d078213391 SHA256 f6c39452c6983916a9e7a13f2b5f3276eb96995a13bc0c0a5a966a797ec45d00
+MISC ChangeLog 15241 RMD160 fa116b6192e4896732c66658fa6a844be782ca29 SHA1 31c64c5921d9102f505fa47875884bfa470aacde SHA256 54a212cf6a15b044ff01fd37150ec8f8facfe7927199dc21aef43fef68d3ac63
 MISC metadata.xml 419 RMD160 898b8233ab233060d8137dadf28c291b83a65500 SHA1 ee62c352812f8765122e5a65b7df5f8794c6c485 SHA256 859faa6fc0c008e92a6432f0fd50a760170d724b15997e557d5d73088277c4db
